fixing light mode and dark mode

--- a/assets/scss/_btn.scss
+++ b/assets/scss/_btn.scss
@@ -23,7 +23,7 @@
 .link,
 .link:visited,
 .link:active {
-  color: inherit;
+  color: var(--link-text);
   text-decoration: none;
 }
 .btn:hover {
