--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -16,6 +16,8 @@
   --text-secondary: var(--black);
   --modal-background: var(--black);
   --modal-text: var(--white);
+  --student-text: var(--white);
+  --link-text: var(--white);
   /* Styles */
 
   /* Type */
